--- a/client/book.html
+++ b/client/book.html
@@ -3,6 +3,16 @@
     <ul id = '{{_id}}' class = 'nav nav-list text-left'>
         <li class = "thumbnail"><img src="{{url}}" alt=""></li>
         <div class = "thumbnail content">
+          {{#if currentUser}}
+            <div class = "like-bar">
+              <a href="#" class = "like">
+                <i class = "fa fa-heart-o"></i>
+              </a>
+              <span class = "label label-danger">{{numLikes}}</span>
+              <span class = "badge badge-default">{{likesThis}}</span>
+            </div>
+          {{/if}}
+
           <li><strong>{{title}}</strong></li>
           <li>{{format}}</li>
         </div>
